[package]
name = "textwidth"
version = "1.2.0"
description = "Get the width of a piece of text for a font through xlib"
authors = ["Marcel Müller <neikos@neikos.email>"]
license = "MIT"
edition = "2018"

[dependencies]
x11 = { version = "2.18.2", features = ["xlib"] }
thiserror = "1"
static_assertions = "1.1.0"
